@@ -8,4 +8,5 @@ install:
   - "pip install . -r test_requirements.txt"
 script:
   - "pip install mypackage -i file://`pwd`/fixtures/"
+  - "pip install `pwd`/fixtures/mydevpackage"
   - "pytest ./tests"
