@@ -2,6 +2,7 @@
 develop =
   .
   fixtures/mypackage
+  fixtures/mydevpackage
 parts =
   py.test
   releaser
@@ -25,6 +26,7 @@ eggs =
     fanstatic[test]
     pytest
     mypackage
+    mydevpackage
     pytest-cov
 
 [releaser]
