@@ -1,0 +1,5 @@
+from fanstatic import Library, Resource
+
+devfoo = Library('devfoo', 'resources')
+
+style = Resource(devfoo, 'style.css')
