@@ -1,0 +1,3 @@
+body {
+  color: #f00;
+}
