@@ -4,6 +4,7 @@ envlist =
   py35,
   py36,
   py37,
+  py38,
 
 [testenv]
 deps =
@@ -13,4 +14,5 @@ deps =
   pytest
 commands =
   pip install mypackage -i file://{toxinidir}/fixtures/
+  pip install {toxinidir}/fixtures/mydevpackage
   py.test {posargs:tests/}
